--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,10 @@
 ---
 # vars file for ansible-php-fpm
 
+php__yapkg__names: '{% if app__php__yapkg__list is not defined or app__php__yapkg__list is none %}{{ app__php__yapkg__names | d(default__php__yapkg__names) }}{% endif %}'
+php__yapkg__list: '{% if app__php__yapkg__list is defined and app__php__yapkg__list is not none and app__php__yapkg__list is not string and app__php__yapkg__list is iterable %}{{ app__php__yapkg__list }}{% endif %}'
+
+php__user: '{{ app__php__user | d(default__php__user, True) }}'
+
+php__nologin: '{{ app__php__nologin | d(default__php__nologin) }}'
+
