--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,34 @@
 ---
 # tasks file for ansible-php-fpm
+- name: Search for the right login shell per user
+  stat:
+    path: '{{ item.shell | d(php__nologin) }}'
+  register: user_nologin_stat
+  with_items: '{{ php__user }}'
+
+- name: Set the right login shell per user
+  set_fact:
+    user_nologin_fact: '{{ user_nologin_fact | d([]) + [ {"shell": the_shell, "user": item.item.user} ] }}'
+  vars:
+    the_shell: '{% if item.stat.exists %}{{ item.item.shell }}{% else %}{{ php__nologin }}{% endif %}'
+  with_items: '{{ user_nologin_stat.results }}'
+
+- name: Make sure the right groups exist
+  group:
+    name: "{{ item.group }}"
+    system: yes
+  when: item.group is defined and item.group is string
+  with_items: '{{ php__user }}'
+
+- name: Make sure the right users exist
+  user:
+    name: "{{ item.0.user }}"
+    group: "{{ item.0.group }}"
+    home: "{{ item.0.home | d('/var/lib/' + item.0.user) }}"
+    shell: "{{ item.1.shell }}"
+    system: yes
+  when: item.0.user == item.1.user
+  with_together:
+    - '{{ php__user }}'
+    - '{{ user_nologin_fact }}'
 
