--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,15 +9,15 @@ default__php__yapkg__names:
 # add the user and process related infos first and the optional
 # pool config inside "conf:"
 default__php__process:
-  - name: "custom-php"
-    user: 'php-fpm'
-    group: 'php-fpm'
-    home: '/var/lib/php-fpm'
-    comment: 'Dedicated Process for PHP-FPM'
-    conf:
+#  - name: "custom-php"
+#    user: 'php-fpm'
+#    group: 'php-fpm'
+#    home: '/var/lib/php-fpm'
+#    comment: 'Dedicated Process for PHP-FPM'
+#    conf:
       # all these attributes are added to the config no questions asked
-      listen: '/var/run/php5-fpm-custom.sock'
-#      ...
+#      listen: '/var/run/php5-fpm-custom.sock'
+      #...
 
 default__php__nologin: '/usr/bin/nologin'
 default__php_fpm__pool: '/etc/php5/fpm/pool.d'
