--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,9 +9,9 @@ galaxy_info:
   - name: Debian
 
   galaxy_tags:
-    - socialmedia:social-media
-    - shariff
     - php
+    - fpm
+    - cgi:fastcgi
 
 dependencies:
   - { role: inofix.yapkg, yapkg__group_name: 'php (fpm)', yapkg__names: '{{ php__yapkg__names }}', when: '{{ php__yapkg__names is not string and php__yapkg__names is iterable }}' }
