--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,10 +14,12 @@ default__php__process:
 #    group: 'php-fpm'
 #    home: '/var/lib/php-fpm'
 #    comment: 'Dedicated Process for PHP-FPM'
-#    conf:
-      # all these attributes are added to the config no questions asked
-#      listen: '/var/run/php5-fpm-custom.sock'
-      #...
+     # 'name', 'user' and 'group' are taken from above and then everything
+     # under 'conf' is added to the pool config, no questions asked..
+#    conf: |
+#      listen = /var/run/php5-fpm-custom.sock
+#      pm = dynamic
+#      ...
 
 default__php__nologin: '/usr/bin/nologin'
 default__php_fpm__pool: '/etc/php5/fpm/pool.d'
