--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,8 +6,8 @@
     path: '{{ item.shell | d(php__nologin) }}'
   register: user_nologin_stat
   when:
-    - '{{ item.name is defined }}'
-    - '{{ item.name is string }}'
+    - item.name is defined
+    - item.name is string
   with_items: '{{ php__process }}'
 
 - name: Set the right login shell per user
@@ -16,7 +16,7 @@
   vars:
     the_shell: '{% if item.stat.exists %}{{ item.item.shell }}{% else %}{{ php__nologin }}{% endif %}'
   when:
-    - '{{ item.stat is defined }}'
+    - item.stat is defined
   with_items: '{{ user_nologin_stat.results }}'
 
 - name: Make sure the right groups exist
@@ -24,8 +24,8 @@
     name: "{{ item.group }}"
     system: yes
   when:
-    - '{{ item.group is defined }}'
-    - '{{ item.group is string }}'
+    - item.group is defined
+    - item.group is string
   with_items: '{{ php__process }}'
 
 - name: Make sure the right users exist
@@ -36,8 +36,8 @@
     shell: "{{ item.1.shell }}"
     system: yes
   when:
-    - '{{ item.0.user is defined }}'
-    - '{{ item.0.user == item.1.user }}'
+    - item.0.user is defined
+    - item.0.user == item.1.user
   with_together:
     - '{{ php__process }}'
     - '{{ user_nologin_fact }}'
@@ -50,7 +50,7 @@
     group: 'root'
     mode: '0644'
   when:
-    - '{{ item.name is defined }}'
-    - '{{ item.name is string }}'
+    - item.name is defined
+    - item.name is string
   with_items: '{{ php__process }}'
 
